# passbot

./: .dockerignore  .env.dev  .env.dist  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  ROADMAP.txt  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  prod.Dockerfile  pyproject.toml  scrapy.cfg  tox.ini
.github/workflows/: lint.yaml  test.yaml
.github/workfows/: lint.yaml
alembic/: env.py
alembic/versions/: 7ad72b2d7909_initial.py
passbot/: __init__.py  commands.py  config.py  crud.py  db.py  loggers.py  models.py  smtp.py  utils.py
passbot/alembic/: env.py
passbot/alembic/versions/: 90d972765e1d_.py  c4a76d52af6c_.py
passbot/bots/: base.py  stherblain_hotel.py
passbot/commands/: bot.py
passbot/crawlers/: items.py  loaders.py  middlewares.py  pipelines.py  settings.py
passbot/crawlers/spiders/: check.py  saintherblainhotel.py  vitemonpasseport.py
passport/: databases.py  smtp.py
passport/bots/: base.py
requirements/: dev.txt  prod.txt  test.txt
scripts/db/: init_db.sh
tests/: __init__.py  conftest.py  test_loaders.py  test_pipeline_date.py  test_pipeline_email.py  test_pipeline_save.py  test_pipeline_timeout.py  test_pipeline_zipcode.py  test_pipelines.py  test_saintherblainhotel.py  test_smtp.py  test_spider_check.py  test_spider_saintherblainhotel.py  test_spider_vitemonpassport.py  test_vitemonpassport.py
tests/plugins/: hooks.py
tests/samples/vitemonpasseport/: p1.html  p2.html
tests/spiders/: test_saintherblainhotel.py  test_vitemonpassport.py
tests/utils/: base.py  db.py  factory.py  settings.py
